# nerdy-news-hackathon

./: LICENSE  README.md
backend/: .gitignore  Makefile  build.sh  pyproject.toml  requirements.txt
backend/admins/: admin.py  backends.py  forms.py  manager.py  models.py
backend/admins/migrations/: 0001_initial.py  0002_alter_customadmins_table.py
backend/config/: asgi.py  settings.py  urls.py
backend/news/: admin.py  models.py  urls.py  views.py
backend/news/migrations/: 0001_initial.py  0002_categoriesmodel.py
backend/staticfiles/: staticfiles.json
backend/utils/: utils.py
backend/wordpress/: admin.py  apps.py  models.py  signals.py
backend/wordpress/migrations/: 0001_initial.py
mobile/: analysis_options.yaml  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml  shorebird.yaml
mobile/android/app/: build.gradle
mobile/assets/: dummy.json
mobile/assets/env/: development.env
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: demo.dart  get_it.dart  main.dart
mobile/lib/app/: app.dart
mobile/lib/config/: config.dart  env.dart
mobile/lib/constants/: app_colors.dart  app_strings.dart  text_style.dart  theme_manager.dart
mobile/lib/extensions/: extensions.dart
mobile/lib/games/: game_launch_screen.dart
mobile/lib/services/: cache_helper.dart  supabase_config.dart
mobile/lib/utils/: app_pref.dart  datetime_format.dart  local_storage.dart  routes_manager.dart  utils.dart
mobile/lib/views/: dashboard.dart  home_screen.dart  publisher_news_screen.dart  (+6 more)
mobile/test/: widget_test.dart
mobile/web/: index.html
(+47 files in other folders)
